--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="The Loop logo"
+    <ImageView
+        android:id="@+id/ImageView"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
+        app:srcCompat="@mipmap/ic_launcher_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="151dp"
+        tools:layout_editor_absoluteY="141dp"/>
 
     <Button
         android:id="@+id/button_get_started"
@@ -39,5 +42,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.896" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
